# games

./: 01 network.ipynb  01 research.ipynb  02 mcts.ipynb  03 az.ipynb  04 eval.ipynb  az_agent.py  connect_four_env.py  env.py  evaluation.py  mcts_agent.py  pyproject.toml  train_az.py
envs/: kuhn_env.py
envs/bridge/: bridge_env.py
modeling/: bridge.py  chess.py  common.py  connect_four.py  kuhn_poker.py
models/: model-bridge-v1.pkl  model-connect-four-v1.pkl
