[project]
name = "games"
version = "0.1.0"
description = "AI and games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.88",
    "flax>=0.10.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jax>=0.5.0",
    "matplotlib>=3.10.0",
    "mctx>=0.0.5",
    "omegaconf>=2.3.0",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "pgx>=2.5.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
    "wandb>=0.19.6",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.5.0",
]
